--- a/package.json
+++ b/package.json
@@ -9,10 +9,15 @@
     },
     "dependencies": {
         "@primeuix/themes": "^1.0.0",
+        "@vueuse/core": "^13.9.0",
         "chart.js": "3.3.2",
+        "date-fns": "^4.1.0",
+        "pinia": "^3.0.3",
         "primeicons": "^7.0.0",
         "primevue": "^4.3.1",
+        "socket.io-client": "^4.8.1",
         "tailwindcss-primeui": "^0.5.0",
+        "uuid": "^13.0.0",
         "vue": "^3.4.34",
         "vue-router": "^4.4.0"
     },
