--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dependencies": {
         "@primeuix/themes": "^1.0.0",
         "@vueuse/core": "^13.9.0",
+        "axios": "^1.12.2",
         "chart.js": "3.3.2",
         "date-fns": "^4.1.0",
         "pinia": "^3.0.3",
